Changed Font to Ubuntu

--- a/css/cards.css
+++ b/css/cards.css
@@ -40,6 +40,8 @@ body {
   }
 }
 
+@import url(https://fonts.googleapis.com/css?family=Ubuntu);
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 30px 0;
   padding: 0;
