--- a/css/custom.css
+++ b/css/custom.css
@@ -153,9 +153,10 @@ pre + p { margin: 5vh 0; }
   z-index: 3;
   height:50px;
   width: 50px;
+  display: none;
 }
 .topbuticon{
-  font-size: 5em;
+  font-size: 4em;
   color: rgb(253, 255, 255);
   opacity:0.5;
   text-shadow:  0 3px 3px black;
